# music-practice-helper

./: README.md  app.py  documents-example.json  documents.json  documents.py  entry_editor.py  main.py  pdf.py  player.py  pyproject.toml
src/app/: __init__.py  application.py  documents.py  entry_editor.py  pdf.py  player.py
